# search-MCP

./: .gitignore  LICENSE  README.md  bridge.py  config.json  config_manager.py  content_extractor.py  gui_app.py  installer.iss  main.py  mcp_server.py  pyproject.toml  run_all.py  search_engine.py  test_bridge.py  test_mcp_server.py  test_ws.py
.agents_tmp/: PLAN.md
