[project]
name = "search-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.14.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.3",
    "flet>=0.84.0",
    "flet-desktop>=0.84.0",
    "mcp>=1.27.0",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.44.0",
    "websockets>=16.0",
    "wsproto>=1.3.2",
]
